# MDocs

./: .gitignore  README.md
server/: Cargo.toml  README.md
server/src/: command.rs  handler.rs  main.rs  utils.rs
ui/: .gitignore  LICENSE  README.md  app.config.ts  app.vue  eslint.config.js  nuxt.config.ts  package.json  tailwind.config.js  taze.config.ts
ui/app/: api.ts  router.options.ts
ui/components/layout/: PrevNext.vue
ui/composables/: useBreadcrumb.ts  useCodeTreeState.ts  useCollapsedMap.ts  useConfig.ts  useEditLink.ts  useFileIcon.ts  useI18nDocs.ts  usePm.ts  useScrollspy.ts  useThemes.ts
ui/content/: index.md
ui/i18n/: i18n.config.ts
ui/pages/: [...slug].vue  index.vue
ui/plugins/: umami.client.ts
ui/types/: index.d.ts
