[package]
edition = "2024"
name = "docs_server"
version = "0.1.0"

[dependencies]
actix-cors = "0.7.1"
actix-rt = "2.10.0"
actix-web = "4.11.0"
awc = {version = "3.7.0", features = ["openssl"]}
chrono = {features = ["serde"], version = "0.4.41"}
clap = {version = "4.5.38", features = ["derive"]}
serde = "1.0.219"
serde_json = "1.0.140"
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
